Pint Changelog
==============

0.10 (unreleased)
-----------------

- Add revolutions per second (rps)
- Improved compatbility for upcast types like xarray's DataArray or Dataset, to which
  Pint Quantities now fully defer for arithmetic and NumPy operations. A collection of
  basic tests for proper deferral has been added (for full integration tests, see
  xarray's test suite). The list of upcast types is available at
  `pint.compat.upcast_types` in the API.
  (Issue #959, Thanks Jon Thielen)
- Moved docstrings to Numpy Docs
  (Issue #958)
- Added tests for immutability of the magnitude's type under common operations
  (Issue #957, Thanks Jon Thielen)
- Switched test configuration to pytest and added tests of Pint's matplotlib support.
  (Issue #954, Thanks Jon Thielen)
- Deprecate array protocol fallback except where explicitly defined (`__array__`,
  `__array_priority__`, `__array_function__`, `__array_ufunc__`). The fallback will
  remain until the next minor version, or if the environment variable
  `PINT_ARRAY_PROTOCOL_FALLBACK` is set to 0.
  (Issue #953, Thanks Jon Thielen)
- Removed eval usage when creating UnitDefinition and PrefixDefinition from string.
  (Issue #942)
- Added `fmt_locale` argument to registry.
  (Issue #904)
- Better error message when Babel is not installed.
  (Issue #899)
- It is now possible to redefine units within a context, and use pint for currency
  conversions. Read

  - https://pint.readthedocs.io/en/latest/contexts.html
  - https://pint.readthedocs.io/en/latest/currencies.html

  (Issue #938, Thanks Guido Imperiale)
- NaN (any capitalization) in a definitions file is now treated as a number
  (Issue #938, Thanks Guido Imperiale)
- Added slinch to Avoirdupois group
  (Issue #936, Thanks awcox21)
- Fix bug where ureg.disable_contexts() would fail to fully disable throwaway contexts
  (Issue #932, Thanks Guido Imperiale)
- Use black, flake8, and isort on the project
  (Issues #929, #931, and #937, Thanks Guido Imperiale)